snapshots/care/data4life/hc-result-sdk-kmp/error/0.3.0-SNAPSHOT/error-0.3.0-20210927.134351-1-all.jar.sha1
028be652d5f86407568019b164d3f1e71ee8dee9